--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,17 +1,15 @@
+<ul id="productList">
+  {{#each products}}
+    <li>{{this.name}} - ${{this.price}}</li>
+  {{/each}}
+</ul>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h1>Lista de Productos</h1>
-    <ul>
-        {{#each products}}
-        <li>{{this.title}} - {{this.price}}</li>
-        {{/each}}
-    </ul>
-</body>
-</html>
+<div>
+  {{#if hasPrevPage}}
+    <a href="{{prevLink}}">Página Anterior</a>
+  {{/if}}
+  <span>Página {{page}} de {{totalPages}}</span>
+  {{#if hasNextPage}}
+    <a href="{{nextLink}}">Página Siguiente</a>
+  {{/if}}
+</div>
