--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,5 +1,11 @@
-<ul id="cartList">
-  {{#each cart.products}}
-    <li>{{this.product.name}} - ${{this.product.price}} - Cantidad: {{this.quantity}}</li>
+<h1>Carrito</h1>
+<ul>
+  {{#each items}}
+  <li>
+    <h2>{{this.productId.name}}</h2>
+    <p>{{this.productId.description}}</p>
+    <p>{{this.productId.price}}</p>
+    <p>Cantidad: {{this.quantity}}</p>
+  </li>
   {{/each}}
 </ul>
